app/src/test/resources/context-fragments/v3-realworld-complete/content/13149624-bbb4-380e-892c-cce475c6d310.txt

5 SEARCH/REPLACE blocks applied.
Running verification command: cmake --build ../build-blender -j"$(nproc)" 
```sh
[1/7] Generating buildinfo.h_fake, buildinfo.h
[2/7] Building C object source/creator/CMakeFiles/buildinfoobj.dir/buildinfo.c.o
[3/7] Building C object source/creator/CMakeFiles/blender.dir/buildinfo.c.o
[4/7] Linking CXX executable bin/blender-thumbnailer
[5/7] Building CXX object source/blender/bmesh/CMakeFiles/bf_bmesh.dir/operators/bmo_dupe.cc.o
FAILED: source/blender/bmesh/CMakeFiles/bf_bmesh.dir/operators/bmo_dupe.cc.o 
/usr/bin/c++ -DHAVE_EXECINFO_H -DNDEBUG -DWITH_ASSERT_ABORT -DWITH_BULLET -DWITH_FREESTYLE -DWITH_GMP -DWITH_OPENVDB -DWITH_OPENVDB_BLOSC -DWITH_TBB -D_FILE_OFFSET_BITS=64 -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -D__LITTLE_ENDIAN__ -I/home/lutz/IdeaProjects/blender/source/blender/bmesh -I/home/lutz/IdeaProjects/blender/intern/eigen -I/home/lutz/IdeaProjects/blender/extern/rangetree -I/home/lutz/IdeaProjects/blender/source/blender/blenkernel -I/home/lutz/IdeaProjects/blender/intern/openvdb -I/home/lutz/IdeaProjects/blender/intern/mikktspace/. -I/home/lutz/IdeaProjects/blender/source/blender/makesdna -I/home/lutz/IdeaProjects/build-blender/source/blender/makesdna/intern -I/home/lutz/IdeaProjects/blender/source/blender/blenlib -I/home/lutz/IdeaProjects/blender/source/blender/blentranslation -I/home/lutz/IdeaProjects/blender/source/blender/depsgraph -I/home/lutz/IdeaProjects/blender/intern/clog -I/home/lutz/IdeaProjects/blender/intern/guardedalloc -I/home/lutz/IdeaProjects/blender/intern/atomic/. -isystem /home/lutz/IdeaProjects/blender/extern/bullet2/src -isystem /home/lutz/IdeaProjects/blender/intern/rigidbody -isystem /home/lutz/IdeaProjects/blender/lib/linux_x64/gmp/include -isystem /home/lutz/IdeaProjects/blender/lib/linux_x64/openvdb/include -isystem /home/lutz/IdeaProjects/blender/lib/linux_x64/tbb/include -Wuninitialized -Wredundant-decls -Wall -Wno-invalid-offsetof -Wno-sign-compare -Wlogical-op -Winit-self -Wmissing-include-dirs -Wno-div-by-zero -Wtype-limits -Werror=return-type -Wno-char-subscripts -Wno-unknown-pragmas -Wpointer-arith -Wunused-parameter -Wwrite-strings -Wundef -Wcomma-subscript -Wformat-signedness -Wrestrict -Wno-suggest-override -Wuninitialized -Wno-stringop-overread -Wno-stringop-overflow -Wimplicit-fallthrough=5 -Wundef -Wmissing-declarations  -march=x86-64-v2 -pipe -fPIC -funsigned-char -fno-strict-aliasing -ffp-contract=off -fmacro-prefix-map="/home/lutz/IdeaProjects/blender/"="" -fmacro-prefix-map="/home/lutz/IdeaProjects/build-blender/"="" -Wno-maybe-uninitialized -O2 -DNDEBUG -std=c++17 -MD -MT source/blender/bmesh/CMakeFiles/bf_bmesh.dir/operators/bmo_dupe.cc.o -MF source/blender/bmesh/CMakeFiles/bf_bmesh.dir/operators/bmo_dupe.cc.o.d -o source/blender/bmesh/CMakeFiles/bf_bmesh.dir/operators/bmo_dupe.cc.o -c /home/lutz/IdeaProjects/blender/source/blender/bmesh/operators/bmo_dupe.cc
/home/lutz/IdeaProjects/blender/source/blender/bmesh/operators/bmo_dupe.cc: In function ‘void bmo_spin_exec(BMesh*, BMOperator*)’:
/home/lutz/IdeaProjects/blender/source/blender/bmesh/operators/bmo_dupe.cc:586:3: error: ‘BMO_slot_mat_get’ was not declared in this scope; did you mean ‘BMO_slot_mat_set’?
  586 |   BMO_slot_mat_get(op->slots_in, "space", space);
      |   ^~~~~~~~~~~~~~~~
      |   BMO_slot_mat_set
ninja: build stopped: subcommand failed.

```
Asking LLM to fix build/lint failures